// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiPagination is rendered 1`] = `
<nav
  aria-label="aria-label"
  class="euiPagination testClass1 testClass2 emotion-euiPagination-euiTestCss"
  data-test-subj="test subject string"
>
  <span
    aria-atomic="true"
    aria-relevant="additions text"
    class="emotion-euiScreenReaderOnly"
    role="status"
  >
    Page 1 of 1
  </span>
  <button
    aria-label="Previous page"
    class="euiButtonIcon euiPaginationArrowButton emotion-euiButtonIcon-xs-empty-disabled-isDisabled-euiPaginationButton"
    data-test-subj="pagination-button-previous"
    disabled=""
    type="button"
  >
    <span
      aria-hidden="true"
      class="euiButtonIcon__icon"
      color="inherit"
      data-euiicon-type="arrowLeft"
    />
  </button>
  <ul
    class="euiPagination__list emotion-euiPagination__list"
  >
    <li
      class="euiPagination__item"
    >
      <button
        aria-current="page"
        aria-label="Page 1 of 1"
        class="euiButtonEmpty euiPaginationButton emotion-euiButtonDisplay-euiButtonEmpty-s-empty-disabled-isDisabled-euiPaginationButton-isActive"
        data-test-subj="pagination-button-0"
        disabled=""
        type="button"
      >
        <span
          class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
        >
          <span
            class="eui-textTruncate euiButtonEmpty__text"
          >
            1
          </span>
        </span>
      </button>
    </li>
  </ul>
  <button
    aria-label="Next page"
    class="euiButtonIcon euiPaginationArrowButton emotion-euiButtonIcon-xs-empty-disabled-isDisabled-euiPaginationButton"
    data-test-subj="pagination-button-next"
    disabled=""
    type="button"
  >
    <span
      aria-hidden="true"
      class="euiButtonIcon__icon"
      color="inherit"
      data-euiicon-type="arrowRight"
    />
  </button>
</nav>
`;

exports[`EuiPagination props activePage can be -1 1`] = `
<nav
  class="euiPagination emotion-euiPagination"
>
  <span
    aria-atomic="true"
    aria-relevant="additions text"
    class="emotion-euiScreenReaderOnly"
    role="status"
  >
    Last Page of collection
  </span>
  <button
    aria-label="First page"
    class="euiButtonIcon euiPaginationArrowButton emotion-euiButtonIcon-xs-empty-text-euiPaginationButton"
    data-test-subj="pagination-button-first"
    title="First page"
    type="button"
  >
    <span
      aria-hidden="true"
      class="euiButtonIcon__icon"
      color="inherit"
      data-euiicon-type="arrowStart"
    />
  </button>
  <button
    aria-label="Previous page"
    class="euiButtonIcon euiPaginationArrowButton emotion-euiButtonIcon-xs-empty-text-euiPaginationButton"
    data-test-subj="pagination-button-previous"
    title="Previous page"
    type="button"
  >
    <span
      aria-hidden="true"
      class="euiButtonIcon__icon"
      color="inherit"
      data-euiicon-type="arrowLeft"
    />
  </button>
  <button
    aria-label="Next page"
    class="euiButtonIcon euiPaginationArrowButton emotion-euiButtonIcon-xs-empty-disabled-isDisabled-euiPaginationButton"
    data-test-subj="pagination-button-next"
    disabled=""
    type="button"
  >
    <span
      aria-hidden="true"
      class="euiButtonIcon__icon"
      color="inherit"
      data-euiicon-type="arrowRight"
    />
  </button>
  <button
    aria-label="Last page"
    class="euiButtonIcon euiPaginationArrowButton emotion-euiButtonIcon-xs-empty-disabled-isDisabled-euiPaginationButton"
    data-test-subj="pagination-button-last"
    disabled=""
    type="button"
  >
    <span
      aria-hidden="true"
      class="euiButtonIcon__icon"
      color="inherit"
      data-euiicon-type="arrowEnd"
    />
  </button>
</nav>
`;

exports[`EuiPagination props activePage is rendered 1`] = `
<nav
  class="euiPagination emotion-euiPagination"
>
  <span
    aria-atomic="true"
    aria-relevant="additions text"
    class="emotion-euiScreenReaderOnly"
    role="status"
  >
    Page 6 of 10
  </span>
  <button
    aria-label="Previous page"
    class="euiButtonIcon euiPaginationArrowButton emotion-euiButtonIcon-xs-empty-text-euiPaginationButton"
    data-test-subj="pagination-button-previous"
    title="Previous page"
    type="button"
  >
    <span
      aria-hidden="true"
      class="euiButtonIcon__icon"
      color="inherit"
      data-euiicon-type="arrowLeft"
    />
  </button>
  <ul
    class="euiPagination__list emotion-euiPagination__list"
  >
    <li
      class="euiPagination__item"
    >
      <button
        aria-label="Page 1 of 10"
        class="euiButtonEmpty euiPaginationButton emotion-euiButtonDisplay-euiButtonEmpty-s-empty-text-euiPaginationButton"
        data-test-subj="pagination-button-0"
        type="button"
      >
        <span
          class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
        >
          <span
            class="eui-textTruncate euiButtonEmpty__text"
          >
            1
          </span>
        </span>
      </button>
    </li>
    <li
      aria-label="Skipping pages 2 to 3"
      class="euiPagination__item emotion-euiPagination__ellipsis"
    >
      …
    </li>
    <li
      class="euiPagination__item"
    >
      <button
        aria-label="Page 4 of 10"
        class="euiButtonEmpty euiPaginationButton emotion-euiButtonDisplay-euiButtonEmpty-s-empty-text-euiPaginationButton"
        data-test-subj="pagination-button-3"
        type="button"
      >
        <span
          class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
        >
          <span
            class="eui-textTruncate euiButtonEmpty__text"
          >
            4
          </span>
        </span>
      </button>
    </li>
    <li
      class="euiPagination__item"
    >
      <button
        aria-label="Page 5 of 10"
        class="euiButtonEmpty euiPaginationButton emotion-euiButtonDisplay-euiButtonEmpty-s-empty-text-euiPaginationButton"
        data-test-subj="pagination-button-4"
        type="button"
      >
        <span
          class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
        >
          <span
            class="eui-textTruncate euiButtonEmpty__text"
          >
            5
          </span>
        </span>
      </button>
    </li>
    <li
      class="euiPagination__item"
    >
      <button
        aria-current="page"
        aria-label="Page 6 of 10"
        class="euiButtonEmpty euiPaginationButton emotion-euiButtonDisplay-euiButtonEmpty-s-empty-disabled-isDisabled-euiPaginationButton-isActive"
        data-test-subj="pagination-button-5"
        disabled=""
        type="button"
      >
        <span
          class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
        >
          <span
            class="eui-textTruncate euiButtonEmpty__text"
          >
            6
          </span>
        </span>
      </button>
    </li>
    <li
      class="euiPagination__item"
    >
      <button
        aria-label="Page 7 of 10"
        class="euiButtonEmpty euiPaginationButton emotion-euiButtonDisplay-euiButtonEmpty-s-empty-text-euiPaginationButton"
        data-test-subj="pagination-button-6"
        type="button"
      >
        <span
          class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
        >
          <span
            class="eui-textTruncate euiButtonEmpty__text"
          >
            7
          </span>
        </span>
      </button>
    </li>
    <li
      class="euiPagination__item"
    >
      <button
        aria-label="Page 8 of 10"
        class="euiButtonEmpty euiPaginationButton emotion-euiButtonDisplay-euiButtonEmpty-s-empty-text-euiPaginationButton"
        data-test-subj="pagination-button-7"
        type="button"
      >
        <span
          class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
        >
          <span
            class="eui-textTruncate euiButtonEmpty__text"
          >
            8
          </span>
        </span>
      </button>
    </li>
    <li
      class="euiPagination__item"
    >
      <button
        aria-label="Page 9 of 10"
        class="euiButtonEmpty euiPaginationButton emotion-euiButtonDisplay-euiButtonEmpty-s-empty-text-euiPaginationButton"
        data-test-subj="pagination-button-8"
        type="button"
      >
        <span
          class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
        >
          <span
            class="eui-textTruncate euiButtonEmpty__text"
          >
            9
          </span>
        </span>
      </button>
    </li>
    <li
      class="euiPagination__item"
    >
      <button
        aria-label="Page 10 of 10"
        class="euiButtonEmpty euiPaginationButton emotion-euiButtonDisplay-euiButtonEmpty-s-empty-text-euiPaginationButton"
        data-test-subj="pagination-button-9"
        type="button"
      >
        <span
          class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
        >
          <span
            class="eui-textTruncate euiButtonEmpty__text"
          >
            10
          </span>
        </span>
      </button>
    </li>
  </ul>
  <button
    aria-label="Next page"
    class="euiButtonIcon euiPaginationArrowButton emotion-euiButtonIcon-xs-empty-text-euiPaginationButton"
    data-test-subj="pagination-button-next"
    title="Next page"
    type="button"
  >
    <span
      aria-hidden="true"
      class="euiButtonIcon__icon"
      color="inherit"
      data-euiicon-type="arrowRight"
    />
  </button>
</nav>
`;

exports[`EuiPagination props aria-controls is rendered 1`] = `
<nav
  class="euiPagination emotion-euiPagination"
>
  <span
    aria-atomic="true"
    aria-relevant="additions text"
    class="emotion-euiScreenReaderOnly"
    role="status"
  >
    Page 1 of 1
  </span>
  <button
    aria-label="Previous page"
    class="euiButtonIcon euiPaginationArrowButton emotion-euiButtonIcon-xs-empty-disabled-isDisabled-euiPaginationButton"
    data-test-subj="pagination-button-previous"
    disabled=""
    type="button"
  >
    <span
      aria-hidden="true"
      class="euiButtonIcon__icon"
      color="inherit"
      data-euiicon-type="arrowLeft"
    />
  </button>
  <ul
    class="euiPagination__list emotion-euiPagination__list"
  >
    <li
      class="euiPagination__item"
    >
      <button
        aria-controls="idOfTable"
        aria-current="page"
        aria-label="Page 1 of 1"
        class="euiButtonEmpty euiPaginationButton emotion-euiButtonDisplay-euiButtonEmpty-s-empty-disabled-isDisabled-euiPaginationButton-isActive"
        data-test-subj="pagination-button-0"
        disabled=""
        type="button"
      >
        <span
          class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
        >
          <span
            class="eui-textTruncate euiButtonEmpty__text"
          >
            1
          </span>
        </span>
      </button>
    </li>
  </ul>
  <button
    aria-label="Next page"
    class="euiButtonIcon euiPaginationArrowButton emotion-euiButtonIcon-xs-empty-disabled-isDisabled-euiPaginationButton"
    data-test-subj="pagination-button-next"
    disabled=""
    type="button"
  >
    <span
      aria-hidden="true"
      class="euiButtonIcon__icon"
      color="inherit"
      data-euiicon-type="arrowRight"
    />
  </button>
</nav>
`;

exports[`EuiPagination props compressed is rendered 1`] = `
<nav
  class="euiPagination emotion-euiPagination"
>
  <span
    aria-atomic="true"
    aria-relevant="additions text"
    class="emotion-euiScreenReaderOnly"
    role="status"
  >
    Page 1 of 1
  </span>
  <button
    aria-label="First page"
    class="euiButtonIcon euiPaginationArrowButton emotion-euiButtonIcon-xs-empty-disabled-isDisabled-euiPaginationButton"
    data-test-subj="pagination-button-first"
    disabled=""
    type="button"
  >
    <span
      aria-hidden="true"
      class="euiButtonIcon__icon"
      color="inherit"
      data-euiicon-type="arrowStart"
    />
  </button>
  <button
    aria-label="Previous page"
    class="euiButtonIcon euiPaginationArrowButton emotion-euiButtonIcon-xs-empty-disabled-isDisabled-euiPaginationButton"
    data-test-subj="pagination-button-previous"
    disabled=""
    type="button"
  >
    <span
      aria-hidden="true"
      class="euiButtonIcon__icon"
      color="inherit"
      data-euiicon-type="arrowLeft"
    />
  </button>
  <div
    class="euiText euiPagination__compressedText emotion-euiText-s-euiPagination__compressedText"
  >
    <span>
      1
    </span>
     of 
    <span>
      1
    </span>
  </div>
  <button
    aria-label="Next page"
    class="euiButtonIcon euiPaginationArrowButton emotion-euiButtonIcon-xs-empty-disabled-isDisabled-euiPaginationButton"
    data-test-subj="pagination-button-next"
    disabled=""
    type="button"
  >
    <span
      aria-hidden="true"
      class="euiButtonIcon__icon"
      color="inherit"
      data-euiicon-type="arrowRight"
    />
  </button>
  <button
    aria-label="Last page"
    class="euiButtonIcon euiPaginationArrowButton emotion-euiButtonIcon-xs-empty-disabled-isDisabled-euiPaginationButton"
    data-test-subj="pagination-button-last"
    disabled=""
    type="button"
  >
    <span
      aria-hidden="true"
      class="euiButtonIcon__icon"
      color="inherit"
      data-euiicon-type="arrowEnd"
    />
  </button>
</nav>
`;

exports[`EuiPagination props pageCount can be 0 1`] = `
<nav
  class="euiPagination emotion-euiPagination"
>
  <span
    aria-atomic="true"
    aria-relevant="additions text"
    class="emotion-euiScreenReaderOnly"
    role="status"
  >
    Page 1 of collection
  </span>
  <button
    aria-label="First page"
    class="euiButtonIcon euiPaginationArrowButton emotion-euiButtonIcon-xs-empty-disabled-isDisabled-euiPaginationButton"
    data-test-subj="pagination-button-first"
    disabled=""
    type="button"
  >
    <span
      aria-hidden="true"
      class="euiButtonIcon__icon"
      color="inherit"
      data-euiicon-type="arrowStart"
    />
  </button>
  <button
    aria-label="Previous page"
    class="euiButtonIcon euiPaginationArrowButton emotion-euiButtonIcon-xs-empty-disabled-isDisabled-euiPaginationButton"
    data-test-subj="pagination-button-previous"
    disabled=""
    type="button"
  >
    <span
      aria-hidden="true"
      class="euiButtonIcon__icon"
      color="inherit"
      data-euiicon-type="arrowLeft"
    />
  </button>
  <button
    aria-label="Next page"
    class="euiButtonIcon euiPaginationArrowButton emotion-euiButtonIcon-xs-empty-text-euiPaginationButton"
    data-test-subj="pagination-button-next"
    title="Next page"
    type="button"
  >
    <span
      aria-hidden="true"
      class="euiButtonIcon__icon"
      color="inherit"
      data-euiicon-type="arrowRight"
    />
  </button>
  <button
    aria-label="Last page"
    class="euiButtonIcon euiPaginationArrowButton emotion-euiButtonIcon-xs-empty-text-euiPaginationButton"
    data-test-subj="pagination-button-last"
    title="Last page"
    type="button"
  >
    <span
      aria-hidden="true"
      class="euiButtonIcon__icon"
      color="inherit"
      data-euiicon-type="arrowEnd"
    />
  </button>
</nav>
`;

exports[`EuiPagination props pageCount is rendered 1`] = `
<nav
  class="euiPagination emotion-euiPagination"
>
  <span
    aria-atomic="true"
    aria-relevant="additions text"
    class="emotion-euiScreenReaderOnly"
    role="status"
  >
    Page 1 of 10
  </span>
  <button
    aria-label="Previous page"
    class="euiButtonIcon euiPaginationArrowButton emotion-euiButtonIcon-xs-empty-disabled-isDisabled-euiPaginationButton"
    data-test-subj="pagination-button-previous"
    disabled=""
    type="button"
  >
    <span
      aria-hidden="true"
      class="euiButtonIcon__icon"
      color="inherit"
      data-euiicon-type="arrowLeft"
    />
  </button>
  <ul
    class="euiPagination__list emotion-euiPagination__list"
  >
    <li
      class="euiPagination__item"
    >
      <button
        aria-current="page"
        aria-label="Page 1 of 10"
        class="euiButtonEmpty euiPaginationButton emotion-euiButtonDisplay-euiButtonEmpty-s-empty-disabled-isDisabled-euiPaginationButton-isActive"
        data-test-subj="pagination-button-0"
        disabled=""
        type="button"
      >
        <span
          class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
        >
          <span
            class="eui-textTruncate euiButtonEmpty__text"
          >
            1
          </span>
        </span>
      </button>
    </li>
    <li
      class="euiPagination__item"
    >
      <button
        aria-label="Page 2 of 10"
        class="euiButtonEmpty euiPaginationButton emotion-euiButtonDisplay-euiButtonEmpty-s-empty-text-euiPaginationButton"
        data-test-subj="pagination-button-1"
        type="button"
      >
        <span
          class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
        >
          <span
            class="eui-textTruncate euiButtonEmpty__text"
          >
            2
          </span>
        </span>
      </button>
    </li>
    <li
      class="euiPagination__item"
    >
      <button
        aria-label="Page 3 of 10"
        class="euiButtonEmpty euiPaginationButton emotion-euiButtonDisplay-euiButtonEmpty-s-empty-text-euiPaginationButton"
        data-test-subj="pagination-button-2"
        type="button"
      >
        <span
          class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
        >
          <span
            class="eui-textTruncate euiButtonEmpty__text"
          >
            3
          </span>
        </span>
      </button>
    </li>
    <li
      class="euiPagination__item"
    >
      <button
        aria-label="Page 4 of 10"
        class="euiButtonEmpty euiPaginationButton emotion-euiButtonDisplay-euiButtonEmpty-s-empty-text-euiPaginationButton"
        data-test-subj="pagination-button-3"
        type="button"
      >
        <span
          class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
        >
          <span
            class="eui-textTruncate euiButtonEmpty__text"
          >
            4
          </span>
        </span>
      </button>
    </li>
    <li
      class="euiPagination__item"
    >
      <button
        aria-label="Page 5 of 10"
        class="euiButtonEmpty euiPaginationButton emotion-euiButtonDisplay-euiButtonEmpty-s-empty-text-euiPaginationButton"
        data-test-subj="pagination-button-4"
        type="button"
      >
        <span
          class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
        >
          <span
            class="eui-textTruncate euiButtonEmpty__text"
          >
            5
          </span>
        </span>
      </button>
    </li>
    <li
      aria-label="Skipping pages 6 to 9"
      class="euiPagination__item emotion-euiPagination__ellipsis"
    >
      …
    </li>
    <li
      class="euiPagination__item"
    >
      <button
        aria-label="Page 10 of 10"
        class="euiButtonEmpty euiPaginationButton emotion-euiButtonDisplay-euiButtonEmpty-s-empty-text-euiPaginationButton"
        data-test-subj="pagination-button-9"
        type="button"
      >
        <span
          class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
        >
          <span
            class="eui-textTruncate euiButtonEmpty__text"
          >
            10
          </span>
        </span>
      </button>
    </li>
  </ul>
  <button
    aria-label="Next page"
    class="euiButtonIcon euiPaginationArrowButton emotion-euiButtonIcon-xs-empty-text-euiPaginationButton"
    data-test-subj="pagination-button-next"
    title="Next page"
    type="button"
  >
    <span
      aria-hidden="true"
      class="euiButtonIcon__icon"
      color="inherit"
      data-euiicon-type="arrowRight"
    />
  </button>
</nav>
`;

exports[`EuiPagination props responsive can be customized 1`] = `
<nav
  class="euiPagination emotion-euiPagination"
>
  <span
    aria-atomic="true"
    aria-relevant="additions text"
    class="emotion-euiScreenReaderOnly"
    role="status"
  >
    Page 1 of 1
  </span>
  <button
    aria-label="Previous page"
    class="euiButtonIcon euiPaginationArrowButton emotion-euiButtonIcon-xs-empty-disabled-isDisabled-euiPaginationButton"
    data-test-subj="pagination-button-previous"
    disabled=""
    type="button"
  >
    <span
      aria-hidden="true"
      class="euiButtonIcon__icon"
      color="inherit"
      data-euiicon-type="arrowLeft"
    />
  </button>
  <ul
    class="euiPagination__list emotion-euiPagination__list"
  >
    <li
      class="euiPagination__item"
    >
      <button
        aria-current="page"
        aria-label="Page 1 of 1"
        class="euiButtonEmpty euiPaginationButton emotion-euiButtonDisplay-euiButtonEmpty-s-empty-disabled-isDisabled-euiPaginationButton-isActive"
        data-test-subj="pagination-button-0"
        disabled=""
        type="button"
      >
        <span
          class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
        >
          <span
            class="eui-textTruncate euiButtonEmpty__text"
          >
            1
          </span>
        </span>
      </button>
    </li>
  </ul>
  <button
    aria-label="Next page"
    class="euiButtonIcon euiPaginationArrowButton emotion-euiButtonIcon-xs-empty-disabled-isDisabled-euiPaginationButton"
    data-test-subj="pagination-button-next"
    disabled=""
    type="button"
  >
    <span
      aria-hidden="true"
      class="euiButtonIcon__icon"
      color="inherit"
      data-euiicon-type="arrowRight"
    />
  </button>
</nav>
`;

exports[`EuiPagination props responsive can be false 1`] = `
<nav
  class="euiPagination emotion-euiPagination"
>
  <span
    aria-atomic="true"
    aria-relevant="additions text"
    class="emotion-euiScreenReaderOnly"
    role="status"
  >
    Page 1 of 1
  </span>
  <button
    aria-label="Previous page"
    class="euiButtonIcon euiPaginationArrowButton emotion-euiButtonIcon-xs-empty-disabled-isDisabled-euiPaginationButton"
    data-test-subj="pagination-button-previous"
    disabled=""
    type="button"
  >
    <span
      aria-hidden="true"
      class="euiButtonIcon__icon"
      color="inherit"
      data-euiicon-type="arrowLeft"
    />
  </button>
  <ul
    class="euiPagination__list emotion-euiPagination__list"
  >
    <li
      class="euiPagination__item"
    >
      <button
        aria-current="page"
        aria-label="Page 1 of 1"
        class="euiButtonEmpty euiPaginationButton emotion-euiButtonDisplay-euiButtonEmpty-s-empty-disabled-isDisabled-euiPaginationButton-isActive"
        data-test-subj="pagination-button-0"
        disabled=""
        type="button"
      >
        <span
          class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
        >
          <span
            class="eui-textTruncate euiButtonEmpty__text"
          >
            1
          </span>
        </span>
      </button>
    </li>
  </ul>
  <button
    aria-label="Next page"
    class="euiButtonIcon euiPaginationArrowButton emotion-euiButtonIcon-xs-empty-disabled-isDisabled-euiPaginationButton"
    data-test-subj="pagination-button-next"
    disabled=""
    type="button"
  >
    <span
      aria-hidden="true"
      class="euiButtonIcon__icon"
      color="inherit"
      data-euiicon-type="arrowRight"
    />
  </button>
</nav>
`;
